css/main.css
/* ******************** */
/* * Table of Contents  */
/* ******************** */

/* * 1 CSS Reset & Universal Styles */
/* * 2 Removing default outlines from browsers*/
/* * 3 Color Styles */
/* * 4 Mobile Viewport */
/* * 5 Body Styles */
/* * 6 Card Styles */
/* * 6.1 Card Hero Image Styles */
/* * 6.2 Card Main Content Styles*/
/* * 6.3 Annual Plan/Price Area (Grid) Styles */
/* * 6.4.1 Change Button Hover and Focus Styles */
/* * 6.4.2 Change Button Added Focus Styles */
/* * 6.5.1 Payment (Primary) Button Styles */
/* * 6.5.2 Primary Button Hover Styles */
/* * 6.5.3 Primary Button Focus Styles */
/* * 6.6.1 Secondary Button Styles */
/* * 6.6.2 Secondary Button Hover and Focus Styles */
/* * 6.6.3 Secondary Button Added Focus Styles */
/* * 7.1 Footer Styles */
/* * 7.2 Footer Link Hover and Focus Styles */
/* * 7.3 Footer Link Hover Styles */
/* * 7.4 Footer Link Added Focus Styles */
/* * 8 Tablet/Desktop Viewport */

/* ******************** */

/* * CSS Reset & Universal Styles */
*,
::before,
::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
	font-size: 16px;
}

body {
	font-family: 'Red Hat Display', sans-serif;
	background-color: var(--neutral--blue-fade);
}

img {
	max-width: 100%;
}

/* * Removing default focus outline in browsers to add my own focus styles */
a:focus {
	outline: none;
}

::-moz-focus-inner {
	border: 0;
}


/* * Color Styles */
:root {
	--primary--blue-pale: hsl(225, 100%, 94%);
	--primary--blue-bright: hsl(245, 75%, 52%);
	--primary--hover: hsl(245, 83%, 68%); 
	--neutral--blue-pale: hsl(225, 100%, 98%);
	--neutral--blue-desat: hsl(224, 23%, 55%);
	--neutral--blue-fade: hsl(224, 89%, 93%);
	--neutral--blue-dark: hsl(223, 47%, 23%);
	
}

/* **** Mobile Viewport ****/

/* * Body Styles */
.center-card {
	display: grid;
	min-height: 97vh;
	place-items: center;
	background: url(../images/pattern-background-mobile.svg) center/cover no-repeat;
	background-position: top;
	background-size: contain;
}

/* * Card Styles */
.card {
	background-color: #FFF;
	width: 87%;
	max-width: 28.125rem;
	border-radius: 20px;
	box-shadow: 0px 40px 50px -10px rgba(91, 117, 203, 0.3);
}

/* * Card Hero Image Styles */
.card__hero {
	background: url("../images/illustration-hero.svg") center/cover no-repeat; 
	height: 160px;
	border-radius: 16px 16px 0 0;
	margin-bottom: 2rem;
}

/* * Card Main Content Styles */
.card__main-content {
	padding: 0 1.5rem 2.1rem;
	display: flex;
	flex-direction: column;
}

.card__title {
	text-align: center;
	font-size: 1.5rem;
	font-weight: 700;
	color: var(--neutral--blue-dark);
	margin-bottom: 1rem;
}

.card__description {
	text-align: center;
	line-height: 1.6rem;
	font-weight: 500;
	color: var(--neutral--blue-desat);
	padding: 0 .5rem 0;
	margin-bottom: 1.5rem;	
}

/* * Annual Plan/Price Area (Grid) Styles */
.card__plan-area {
	background-color: var(--neutral--blue-pale);
	border-radius: 15px;
	padding: 1.1rem;
	display: grid;
	grid-template-columns: 50px minmax(60px, 120px) 1fr;
	grid-gap: 1rem;
	align-items: center;
	margin-bottom: 1.5rem;
}

.card__music-icon {
	justify-content: left;
}

.card__subtitle {
	font-size: 1rem;
	font-weight: 900;
	color: var(--neutral--blue-dark);
}

.card__price {
	font-size: 1rem;
	font-weight: 500;
	color: var(--neutral--blue-desat);
}

.card__change-btn {
	font-size: .8rem;
	font-weight: 700;
	color: var(--primary--blue-bright);
	justify-self: end;
	position: relative;
}

/* * Change Button Hover and Focus Styles */
.card__change-btn:hover,
.card__change-btn:focus {
	text-decoration: none;
	color: var(--primary--hover);
}

/* * Change Button Added Focus Styles */
.card__change-btn:focus::after {
	content: "";
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	height: 3px;
	background: var(--primary--hover);
}

/* * Payment (Primary) Button Styles */
.card__prim-btn {
	background-color: var(--primary--blue-bright);
	color: #FFF;
	text-decoration: none;
	text-align: center;
	border-radius: 15px;
	padding: 0.9rem 3rem;
	box-shadow: 0px 20px 30px -10px rgba(91, 117, 203, 0.5);
	margin-bottom: 1.5rem;
}

/* * Primary Button Hover Styles */
.card__prim-btn:hover {
	background-color: var(--primary--hover);
}

/* * Primary Button Focus Styles */
.card__prim-btn:focus {
	background-color: var(--primary--hover);
	box-shadow: 
		0 0 0 5px #FFF,
		0 0 0 10px var(--primary--hover)
	;
}

/* * Secondary Button Styles */
.card__sec-btn {
	color: var(--neutral--blue-desat);
	text-decoration: none;
	text-align: center;
	font-weight: 700;
}

/* * Secondary Button Hover and Focus Styles */
.card__sec-btn:hover,							
.card__sec-btn:focus {
	color: var(--neutral--blue-dark);
}

/* * Secondary Button Added Focus Styles */
.card__sec-btn:focus {
	outline: solid 2px var(--neutral--blue-dark);
}

/* * Footer Styles */
footer {
	font-size: .7rem; 
	text-align: center;
}

.footer__link {
	color: var(--neutral--blue-desat);
	position: relative;
}

/* * Footer Link Hover and Focus Styles */
.footer__link:hover,
.footer__link:focus {
	color: var(--neutral--blue-dark);
}

/* * Footer Link Hover Styles */
.footer__link:hover {
	text-decoration: none;
}

/* * Footer Link Added Focus Styles */
.footer__link:focus::after {
	content: "";
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	height: 2px;
	background: var(--neutral--blue-dark);
}


/* **** Tablet/Desktop Viewport ****/

@media screen and (min-width: 600px) {
	.center-card {
		background: url(../images/pattern-background-desktop.svg) center/cover no-repeat;
		background-position: top;
		background-size: contain;
	}

	.card__hero {
		height: 13.75rem;
		margin-bottom: 3.375rem;
	}

	.card__main-content {
		padding: 0 3rem 3.375rem;
	}

	.card__plan-area {
		padding: 1.375rem 1.5rem;
		margin-bottom: 1.875rem;
	}

	.card__prim-btn {
		padding-inline: 6.375rem;
		margin-bottom: 2rem;
	}
}

